--- a/public/en/_index-copy/index.html
+++ b/public/en/_index-copy/index.html
@@ -56,14 +56,14 @@ Email: weichengkun AT zju DOT edu DOT cn
 X Li, X Jiang, Y Yang, L Chen, Y Wang, C Wang, C Xu, Y Lv, B Yang, T Wu, H Gao, Z Zhen, Y Qiao, H Ding, 
 </p>  
 <p style="line-height:0;">
-Y Dong, H, Yang, J Song, J Lu, P Zhang, <b>C Wei<sup>*</sup></b>, Z Zhang, W Chen<sup>*</sup>, Q He, S Zhu<sup>*</sup>
+Y Dong, H, Yang, J Song, J Lu, P Zhang, <b>C Wei </b>, Z Zhang, W Chen , Q He, S Zhu 
 <p>Proceedings of the ACM SIGCOMM 2024 Conference, 750-763		2024</p>
 </p>  
 </li>
 <li>
 <p>CMDRL: A Markovian Distributed Rate Limiting Algorithm in Cloud Networks</p>
 <p style="line-height:0;">
-L Chen, X Jiang, X Hu, T Xu, Y Yang, X Li, B Lu,<b> C Wei<sup>*</sup></b>, W Chen<sup>*</sup>
+L Chen, X Jiang, X Hu, T Xu, Y Yang, X Li, B Lu,<b> C Wei </b>, W Chen 
 <p>Proceedings of the 8th Asia-Pacific Workshop on Networking, 59-66		2024</p>
 </p>
 </li>
@@ -77,21 +77,21 @@ T Ma, Z Liu, <b>C Wei</b>, J Huang, Y Zhuo, H Li, N Zhang, Y Guan, D Niu, ...
 <li>
 <p>Securely sampling discrete Gaussian noise for multi-party differential privacy</p>
 <p style="line-height:0;">
-<b>C Wei</b>, R Yu, Y Fan, W Chen<sup>*</sup>, T Wang<sup>*</sup>
+<b>C Wei</b>, R Yu, Y Fan, W Chen , T Wang 
 <p>Proceedings of the 2023 ACM SIGSAC Conference on Computer and Communications Security</p>
  </p>
 </li>
 <li>
 <p>Dpmlbench: Holistic evaluation of differentially private machine learning</p>
 <p style="line-height:0;">
-<b>C Wei</b>, M Zhao, Z Zhang, M Chen, W Meng, B Liu, Y Fan, W Chen<sup>*</sup>
+<b>C Wei</b>, M Zhao, Z Zhang, M Chen, W Meng, B Liu, Y Fan, W Chen 
 <p>Proceedings of the 2023 ACM SIGSAC Conference on Computer and Communications Security</p>
  </p>
 </li>
 <li>
 <p>Examining the effects of a real-time, knowledge-aware tool for academic writing assessment</p>
 <p style="line-height:0;">
-X Li, F Ouyang, J Liu, <b>C Wei<sup>*</sup></b>, W Chen<sup>*</sup>
+X Li, F Ouyang, J Liu, <b>C Wei </b>, W Chen 
 <p>Journal of Educational Computing Research 61 (6), 1143-1174</p>
 </li>
 <li>
@@ -99,28 +99,28 @@ X Li, F Ouyang, J Liu, <b>C Wei<sup>*</sup></b>, W Chen<sup>*</sup>
 <p style="line-height:0;">
 <b>C Wei</b>, X Li, Y Yang, X Jiang, T Xu, B Yang, T Wu, C Xu, Y Lv, H Gao, Z Zhang, Z Chen, Z Wang, Z Zhang, 
 </p><p style="line-height:0;">
-S Zhu<sup>*</sup>, W Chen<sup>*</sup>
+S Zhu , W Chen 
 <p>Proceedings of the ACM SIGCOMM 2023 Conference, 769-782</p>
  </p>
 </li>
 <li>
 <p>Lmsanitator: Defending prompt-tuning against task-agnostic backdoors</p>
 <p style="line-height:0;">
-<b>C Wei</b>, W Meng, Z Zhang, M Chen, M Zhao, W Fang, L Wang, Z Zhang, W Chen<sup>*</sup>
+<b>C Wei</b>, W Meng, Z Zhang, M Chen, M Zhao, W Fang, L Wang, Z Zhang, W Chen 
 <p>arXiv preprint arXiv:2308.13904</p>
  </p>
 </li>
 <li>
 <p>EduNER: a Chinese named entity recognition dataset for education research</p>
 <p style="line-height:0;">
-X Li, <b>C Wei</b>, Z Jiang, W Meng, F Ouyang, Z Zhang, W Chen<sup>*</sup>
+X Li, <b>C Wei</b>, Z Jiang, W Meng, F Ouyang, Z Zhang, W Chen 
 <p>Neural Computing and Applications 35 (24), 17717-17731</p>
  </p>
 </li>
 <li>
 <p>Hyq: Hybrid i/o queue architecture for nvme over fabrics to enable high-performance hardware offloading</p>
 <p style="line-height:0;">
-Y Chen, J Chen, Y Wang, Y Chen, Z Jin, J Xu, G Fang, W Lin, <b>C Wei<sup>*</sup></b>, W Chen<sup>*</sup>
+Y Chen, J Chen, Y Wang, Y Chen, Z Jin, J Xu, G Fang, W Lin, <b>C Wei </b>, W Chen 
 <p>2023 IEEE/ACM 23rd International Symposium on Cluster, Cloud and Internet Computing</p>
  </p>
 </li>
@@ -128,7 +128,7 @@ Y Chen, J Chen, Y Wang, Y Chen, Z Jin, J Xu, G Fang, W Lin, <b>C Wei<sup>*</sup>
 <!--  
 - High-performance and Scalable Software-based NVMe Virtualization Mechanism with I/O Queues Passthrough
   <p style="line-height:0;">
-  Y Chen, Z Jin, Y Wang, Y Chen, H Yu, J Xu, J Chen, W Lin, K Fang, <b>C Wei<sup>*</sup></b>, ...
+  Y Chen, Z Jin, Y Wang, Y Chen, H Yu, J Xu, J Chen, W Lin, K Fang, <b>C Wei </b>, ...
 
   arXiv preprint arXiv:2304.05148	
    </p> -->
@@ -136,28 +136,28 @@ Y Chen, J Chen, Y Wang, Y Chen, Z Jin, J Xu, G Fang, W Lin, <b>C Wei<sup>*</sup>
 <li>
 <p>BM-Store: A Transparent and High-performance Local Storage Architecture for Bare-metal Clouds Enabling Large-scale Deployment</p>
 <p style="line-height:0;">
-Y Chen, J Xu, <b>C Wei</b>, Y Wang, X Yuan, Y Zhang, X Yu, Y Chen, Z Wang, S He<sup>*</sup>, W Chen<sup>*</sup>
+Y Chen, J Xu, <b>C Wei</b>, Y Wang, X Yuan, Y Zhang, X Yu, Y Chen, Z Wang, S He , W Chen 
 <p>2023 IEEE International Symposium on High-Performance Computer Architecture</p>
 </p>
 </li>
 <li>
 <p>Cuzk: Accelerating zero-knowledge proof with a faster parallel multi-scalar multiplication algorithm on gpus</p>
   <p style="line-height:0;">
-  T Lu, <b>C Wei</b>, R Yu, C Chen, W Fang, L Wang, Z Wang<sup>*</sup>, W Chen<sup>*</sup>
+  T Lu, <b>C Wei</b>, R Yu, C Chen, W Fang, L Wang, Z Wang , W Chen 
 <p>2023 IACR Transactions on Cryptographic Hardware and Embedded Systems</p>
   </p>
 </li>
 <li>
 <p>AsgLDP: Collecting and generating decentralized attributed graphs with local differential privacy</p>
 <p style="line-height:0;">
-<b>C Wei</b>, S Ji, C Liu, W Chen<sup>*</sup>, T Wang<sup>*</sup>
+<b>C Wei</b>, S Ji, C Liu, W Chen , T Wang 
 <p>IEEE Transactions on Information Forensics and Security 15, 3239-3254</p>
  </p>
 </li>
 <li>
 <p>OB-WSPES: A uniform evaluation system for obfuscation-based web search privacy</p>
 <p style="line-height:0;">
-<b>C Wei</b>, Q Gu, S Ji<sup>*</sup>, W Chen, Z Wang<sup>*</sup>, R Beyah
+<b>C Wei</b>, Q Gu, S Ji , W Chen, Z Wang , R Beyah
 <p>IEEE Transactions on Dependable and Secure Computing 18 (6), 2719-2735</p>
 </p>
 </li>
