--- a/public/zh/zh/index.html
+++ b/public/zh/zh/index.html
@@ -26,42 +26,39 @@
 <h1></h1>
 
 
-<p><a href="/zh/"><img src="photo.png" style="max-width:22.3%;min-width:40px;float:right;" alt="chengkun wei" /></a></p>
-<h1 id="chengkun-wei">Chengkun Wei</h1>
-<pre><code>Researcher of Hundred-Person Program (百人计划研究员)
-Department of Computer Science
-Zhejiang University
-Email: weichengkun AT zju DOT edu DOT cn
+<p><a href="/zh/"><img src="../photo.png" style="max-width:22.3%;min-width:40px;float:right;" alt="chengkun wei" /></a></p>
+<h1 id="魏成坤">魏成坤</h1>
+<pre><code>“百人计划”研究员
+计算机科学与技术学院
+浙江大学
+邮箱：weichengkun AT zju DOT edu DOT cn
 </code></pre>
 <hr>
-<p>I recieved my PhD degree in the Computer Science department of Zhejiang University in 2021 and served as a postdoctoral researcher in ZJU from 2021 to 2024. My research focuses on heterogeneous computing and data security, including cloud computing, high-performance network, trusted execution environment (TEE) and LLM Security. My papers are published on top-tier conference/journal like SIGCOMM, ATC, HPCA, and also on CCS, NDSS, TIFS, and TDSC. I received the <strong>NDSS 2024 Distinguished Paper Award</strong>, and got fundings from the National Natural Science Foundation as well as the Zhejiang Province Postdoctoral Funding Project.</p>
-<p>I sincerely hope to cooperate with students who:</p>
+<p>我于2021年获得浙江大学计算机科学与技术博士学位，并在2021至2024年担任博士后研究员。我的主要研究方向包括：计算机系统结构、云计算、高性能网络、数据安全、异构算力融合。曾发表系统及网络领域顶会/顶刊论文SIGCOMM、ATC、HPCA，在数据安全领域主要论文发表于安全顶会/顶刊CCS、NDSS、TIFS、TDSC等。我曾获得安全四大顶会之一“<strong>NDSS 2024 Distinguished Paper Award</strong>”，并得到国家自然基金、浙江省博士后择优资助项目等项目的支持。</p>
+<hr>
+<p><a href="http://arc.zju.edu.cn/"><img src="../arclab.png" style="max-width:48%;min-width:50px;float:right;" alt="chengkun wei" /></a></p>
+<p>我于2016年加入<a href="http://arc.zju.edu.cn/">浙江大学ArcLab</a>，现在继续在这里工作。</p>
+<p>实验室欢迎对数据安全(LLM安全)、高性能网络(软硬件协同优化)、异构计算(FPGA、GPU)、系统架构(虚拟化、可信执行环境)等方向感兴趣的博士/硕士/本科生访问学习。</p>
+<p>我希望跟我合作的同学能满足以下要求：</p>
 <ul>
-<li>have interest in computer system</li>
-<li>have ideals and pursuits, and can analyze problems well</li>
-<li>have a favorite sport and stick to it</li>
+<li>对计算机系统结构稍微感点兴趣（不排斥就好）</li>
+<li>有理想有追求，能好好地分析问题</li>
+<li>有自己喜欢的运动，并长期坚持</li>
 </ul>
 <hr>
-<p><a href="http://arc.zju.edu.cn/"><img src="arclab.png" style="max-width:50%;min-width:50px;float:right;" alt="chengkun wei" /></a></p>
-<p>I joined <a href="http://arc.zju.edu.cn/">ZJU ArcLab</a> in 2016, and now still work here.</p>
-<p>Our lab welcome PhD/master/undergraduate students who are interested in data security (LLM security), high performance network ( cooperative optimization of software and hardware), heterogeneous computing (FPGA, GPU), system architecture (virtualization, trusted execution environment), etc.</p>
-<hr>
-<h2 id="publicationshttpsscholargooglecomcitationshlzh-cnuser-jrgj9waaaaj"><a href="https://scholar.google.com/citations?hl=zh-CN&user=-jrGj9wAAAAJ">Publications</a></h2>
+<h2 id="发表论文httpsscholargooglecomcitationshlzh-cnuser-jrgj9waaaaj"><a href="https://scholar.google.com/citations?hl=zh-CN&user=-jrGj9wAAAAJ">发表论文</a></h2>
 <ul>
 <li>
 <p>Triton: A Flexible Hardware Offloading Architecture for Accelerating Apsara vSwitch in Alibaba Cloud</p>
 <p style="line-height:0;">
-X Li, X Jiang, Y Yang, L Chen, Y Wang, C Wang, C Xu, Y Lv, B Yang, T Wu, H Gao, Z Zhen, Y Qiao, H Ding, 
-</p>  
-<p style="line-height:0;">
-Y Dong, H, Yang, J Song, J Lu, P Zhang, <b>C Wei<sup>*</sup></b>, Z Zhang, W Chen<sup>*</sup>, Q He, S Zhu<sup>*</sup>
+X Li, X Jiang, Y Yang, L Chen, Y Wang, C Wang, C Xu, Y Lv, ..., <b>C Wei<sup>*</sup> </b>, Z Zhang, W Chen , Q He, S Zhu 
 <p>Proceedings of the ACM SIGCOMM 2024 Conference, 750-763		2024</p>
 </p>  
 </li>
 <li>
 <p>CMDRL: A Markovian Distributed Rate Limiting Algorithm in Cloud Networks</p>
 <p style="line-height:0;">
-L Chen, X Jiang, X Hu, T Xu, Y Yang, X Li, B Lu,<b> C Wei<sup>*</sup></b>, W Chen<sup>*</sup>
+L Chen, X Jiang, X Hu, T Xu, Y Yang, X Li, B Lu,<b> C Wei<sup>*</sup> </b>, W Chen 
 <p>Proceedings of the 8th Asia-Pacific Workshop on Networking, 59-66		2024</p>
 </p>
 </li>
@@ -75,50 +72,48 @@ T Ma, Z Liu, <b>C Wei</b>, J Huang, Y Zhuo, H Li, N Zhang, Y Guan, D Niu, ...
 <li>
 <p>Securely sampling discrete Gaussian noise for multi-party differential privacy</p>
 <p style="line-height:0;">
-<b>C Wei</b>, R Yu, Y Fan, W Chen<sup>*</sup>, T Wang<sup>*</sup>
+<b>C Wei</b>, R Yu, Y Fan, W Chen , T Wang 
 <p>Proceedings of the 2023 ACM SIGSAC Conference on Computer and Communications Security</p>
  </p>
 </li>
 <li>
 <p>Dpmlbench: Holistic evaluation of differentially private machine learning</p>
 <p style="line-height:0;">
-<b>C Wei</b>, M Zhao, Z Zhang, M Chen, W Meng, B Liu, Y Fan, W Chen<sup>*</sup>
+<b>C Wei</b>, M Zhao, Z Zhang, M Chen, W Meng, B Liu, Y Fan, W Chen 
 <p>Proceedings of the 2023 ACM SIGSAC Conference on Computer and Communications Security</p>
  </p>
 </li>
 <li>
 <p>Examining the effects of a real-time, knowledge-aware tool for academic writing assessment</p>
 <p style="line-height:0;">
-X Li, F Ouyang, J Liu, <b>C Wei<sup>*</sup></b>, W Chen<sup>*</sup>
+X Li, F Ouyang, J Liu, <b>C Wei </b>, W Chen 
 <p>Journal of Educational Computing Research 61 (6), 1143-1174</p>
 </li>
 <li>
 <p>Achelous: Enabling Programmability, Elasticity, and Reliability in Hyperscale Cloud Networks</p>
 <p style="line-height:0;">
-<b>C Wei</b>, X Li, Y Yang, X Jiang, T Xu, B Yang, T Wu, C Xu, Y Lv, H Gao, Z Zhang, Z Chen, Z Wang, Z Zhang, 
-</p><p style="line-height:0;">
-S Zhu<sup>*</sup>, W Chen<sup>*</sup>
+<b>C Wei</b>, X Li, Y Yang, X Jiang, T Xu, B Yang, T Wu, C Xu, Z Chen, Z Wang, Z Zhang, S Zhu , W Chen 
 <p>Proceedings of the ACM SIGCOMM 2023 Conference, 769-782</p>
  </p>
 </li>
 <li>
 <p>Lmsanitator: Defending prompt-tuning against task-agnostic backdoors</p>
 <p style="line-height:0;">
-<b>C Wei</b>, W Meng, Z Zhang, M Chen, M Zhao, W Fang, L Wang, Z Zhang, W Chen<sup>*</sup>
+<b>C Wei</b>, W Meng, Z Zhang, M Chen, M Zhao, W Fang, L Wang, Z Zhang, W Chen 
 <p>arXiv preprint arXiv:2308.13904</p>
  </p>
 </li>
 <li>
 <p>EduNER: a Chinese named entity recognition dataset for education research</p>
 <p style="line-height:0;">
-X Li, <b>C Wei</b>, Z Jiang, W Meng, F Ouyang, Z Zhang, W Chen<sup>*</sup>
+X Li, <b>C Wei</b>, Z Jiang, W Meng, F Ouyang, Z Zhang, W Chen 
 <p>Neural Computing and Applications 35 (24), 17717-17731</p>
  </p>
 </li>
 <li>
 <p>Hyq: Hybrid i/o queue architecture for nvme over fabrics to enable high-performance hardware offloading</p>
 <p style="line-height:0;">
-Y Chen, J Chen, Y Wang, Y Chen, Z Jin, J Xu, G Fang, W Lin, <b>C Wei<sup>*</sup></b>, W Chen<sup>*</sup>
+Y Chen, J Chen, Y Wang, Y Chen, Z Jin, J Xu, G Fang, W Lin, <b>C Wei<sup>*</sup> </b>, W Chen 
 <p>2023 IEEE/ACM 23rd International Symposium on Cluster, Cloud and Internet Computing</p>
  </p>
 </li>
@@ -126,7 +121,7 @@ Y Chen, J Chen, Y Wang, Y Chen, Z Jin, J Xu, G Fang, W Lin, <b>C Wei<sup>*</sup>
 <!--  
 - High-performance and Scalable Software-based NVMe Virtualization Mechanism with I/O Queues Passthrough
   <p style="line-height:0;">
-  Y Chen, Z Jin, Y Wang, Y Chen, H Yu, J Xu, J Chen, W Lin, K Fang, <b>C Wei<sup>*</sup></b>, ...
+  Y Chen, Z Jin, Y Wang, Y Chen, H Yu, J Xu, J Chen, W Lin, K Fang, <b>C Wei </b>, ...
 
   arXiv preprint arXiv:2304.05148	
    </p> -->
@@ -134,28 +129,28 @@ Y Chen, J Chen, Y Wang, Y Chen, Z Jin, J Xu, G Fang, W Lin, <b>C Wei<sup>*</sup>
 <li>
 <p>BM-Store: A Transparent and High-performance Local Storage Architecture for Bare-metal Clouds Enabling Large-scale Deployment</p>
 <p style="line-height:0;">
-Y Chen, J Xu, <b>C Wei</b>, Y Wang, X Yuan, Y Zhang, X Yu, Y Chen, Z Wang, S He<sup>*</sup>, W Chen<sup>*</sup>
+Y Chen, J Xu, <b>C Wei</b>, Y Wang, X Yuan, Y Zhang, X Yu, Y Chen, Z Wang, S He , W Chen 
 <p>2023 IEEE International Symposium on High-Performance Computer Architecture</p>
 </p>
 </li>
 <li>
 <p>Cuzk: Accelerating zero-knowledge proof with a faster parallel multi-scalar multiplication algorithm on gpus</p>
   <p style="line-height:0;">
-  T Lu, <b>C Wei</b>, R Yu, C Chen, W Fang, L Wang, Z Wang<sup>*</sup>, W Chen<sup>*</sup>
+  T Lu, <b>C Wei</b>, R Yu, C Chen, W Fang, L Wang, Z Wang , W Chen 
 <p>2023 IACR Transactions on Cryptographic Hardware and Embedded Systems</p>
   </p>
 </li>
 <li>
 <p>AsgLDP: Collecting and generating decentralized attributed graphs with local differential privacy</p>
 <p style="line-height:0;">
-<b>C Wei</b>, S Ji, C Liu, W Chen<sup>*</sup>, T Wang<sup>*</sup>
+<b>C Wei</b>, S Ji, C Liu, W Chen , T Wang 
 <p>IEEE Transactions on Information Forensics and Security 15, 3239-3254</p>
  </p>
 </li>
 <li>
 <p>OB-WSPES: A uniform evaluation system for obfuscation-based web search privacy</p>
 <p style="line-height:0;">
-<b>C Wei</b>, Q Gu, S Ji<sup>*</sup>, W Chen, Z Wang<sup>*</sup>, R Beyah
+<b>C Wei</b>, Q Gu, S Ji , W Chen, Z Wang , R Beyah
 <p>IEEE Transactions on Dependable and Secure Computing 18 (6), 2719-2735</p>
 </p>
 </li>
