--- a/public/en/index.html
+++ b/public/en/index.html
@@ -37,15 +37,8 @@ Email: weichengkun AT zju DOT edu DOT cn
 <hr>
 <!-- 
 [<img src="arclab.png" style="max-width:50%;min-width:50px;float:right;" alt="chengkun wei" />](http://arc.zju.edu.cn/) -->
-<p>I&rsquo;ve joined <a href="http://arc.zju.edu.cn/">ZJU ArcLab</a> since 2016. Our lab welcome PhD/master/undergraduate students who are interested in data security (LLM security), high performance network ( cooperative optimization of software and hardware), heterogeneous computing (FPGA, GPU), system architecture (virtualization, trusted execution environment), etc.</p>
-<p style="line-height:0;">
-I sincerely hope to cooperate with students who:
-<ul>
-<li>have interest in computer system.</li>
-<li>have ideals and pursuits, and can analyze problems well.</li>
-<li>have a favorite sport and stick to it.</li>
-</ul>
-</p>  
+<p>I&rsquo;ve joined <a href="http://arc.zju.edu.cn/">ZJU ArcLab</a> since 2016. Our lab welcomes PhD/master/undergraduate students who are interested in data security (LLM security), high performance network ( cooperative optimization of software and hardware), heterogeneous computing (FPGA, GPU), system architecture (virtualization, trusted execution environment), etc.</p>
+<p>I sincerely hope to cooperate with students who: 1) have interest in computer system. 2) have ideals and pursuits, and can analyze problems well. 3) have a favorite sport and stick to it.</p>
 <hr>
 <h2 id="publicationshttpsscholargooglecomcitationshlzh-cnuser-jrgj9waaaaj"><a href="https://scholar.google.com/citations?hl=zh-CN&user=-jrGj9wAAAAJ">Publications</a></h2>
 <ul>
