--- a/public/zh/zh/index.html
+++ b/public/zh/zh/index.html
@@ -34,17 +34,11 @@
 邮箱：weichengkun AT zju DOT edu DOT cn
 </code></pre>
 <hr>
-<p>我于2021年获得浙江大学计算机科学与技术博士学位，并在2021至2024年担任博士后研究员。我的主要研究方向包括：计算机系统结构、云计算、高性能网络、数据安全、异构算力融合。曾发表系统及网络领域顶会/顶刊论文SIGCOMM、ATC、HPCA，在数据安全领域主要论文发表于安全顶会/顶刊CCS、NDSS、TIFS、TDSC等。我曾获得安全四大顶会之一“<strong>NDSS 2024 Distinguished Paper Award</strong>”，并得到国家自然基金、浙江省博士后择优资助项目等项目的支持。</p>
+<p>魏成坤博士于2021年获得浙江大学计算机科学与技术博士学位，并在2021至2024年担任博士后研究员。主要研究方向包括：计算机系统结构、云计算、高性能网络、数据安全、异构算力融合。曾发表系统及网络领域顶会/顶刊论文SIGCOMM、ATC、HPCA，在数据安全领域主要论文发表于安全顶会/顶刊CCS、NDSS、TIFS、TDSC等。曾获得安全四大顶会之一“<strong>NDSS 2024 Distinguished Paper Award</strong>”，并得到国家自然基金、浙江省博士后择优资助项目等项目的支持。</p>
 <hr>
-<p><a href="http://arc.zju.edu.cn/"><img src="../arclab.png" style="max-width:48%;min-width:50px;float:right;" alt="chengkun wei" /></a></p>
-<p>我于2016年加入<a href="http://arc.zju.edu.cn/">浙江大学ArcLab</a>，现在继续在这里工作。</p>
-<p>实验室欢迎对数据安全(LLM安全)、高性能网络(软硬件协同优化)、异构计算(FPGA、GPU)、系统架构(虚拟化、可信执行环境)等方向感兴趣的博士/硕士/本科生访问学习。</p>
-<p>我希望跟我合作的同学能满足以下要求：</p>
-<ul>
-<li>对计算机系统结构稍微感点兴趣（不排斥就好）</li>
-<li>有理想有追求，能好好地分析问题</li>
-<li>有自己喜欢的运动，并长期坚持</li>
-</ul>
+<!-- 
+[<img src="../arclab.png" style="max-width:48%;min-width:50px;float:right;" alt="chengkun wei" />](http://arc.zju.edu.cn/) -->
+<p>魏成坤博士自2016年加入<a href="http://arc.zju.edu.cn/">浙江大学ArcLab</a>，欢迎对数据安全(LLM安全)、高性能网络(软硬件协同优化)、异构计算(FPGA、GPU)、系统架构(虚拟化、可信执行环境)等方向感兴趣的保研/考研的博士/硕士研究生、本科SRTP竞赛/毕业设计的同学加入Arclab实验室。希望相关同学能满足以下要求：对计算机系统结构稍微感点兴趣（不排斥就好）；有理想有追求，能好好地分析问题；有自己喜欢的运动，并长期坚持。</p>
 <hr>
 <h2 id="发表论文httpsscholargooglecomcitationshlzh-cnuser-jrgj9waaaaj"><a href="https://scholar.google.com/citations?hl=zh-CN&user=-jrGj9wAAAAJ">发表论文</a></h2>
 <ul>
@@ -100,8 +94,8 @@ X Li, F Ouyang, J Liu, <b>C Wei </b>, W Chen
 <p>Lmsanitator: Defending prompt-tuning against task-agnostic backdoors</p>
 <p style="line-height:0;">
 <b>C Wei</b>, W Meng, Z Zhang, M Chen, M Zhao, W Fang, L Wang, Z Zhang, W Chen 
-<p>arXiv preprint arXiv:2308.13904</p>
- </p>
+<p>Network and Distributed System Security (NDSS) Symposium 2024</p>
+</p>
 </li>
 <li>
 <p>EduNER: a Chinese named entity recognition dataset for education research</p>
